<resources>
    <string name="app_name">MFF</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--main page-->
    <string name="tag_welcome_title">Welcome to Monash Friend Finder</string>
    <string name="tag_weather">Weather info here</string>
    <string name="tag_username_display">Student name here</string>
    <string name="tag_location_display">User location here</string>
    <string name="tag_temp_display">User current temperature here</string>
    <string name="tag_date_time_display">Date and time here</string>

    <!--log in page-->
    <string name="tag_username">Username</string>
    <string name="tag_password">Password</string>
    <string name="btn_log_in">Log in</string>
    <string name="btn_register">I am new here</string>
    <string name="btn_skiplogin">Skip Log in</string>
    <string name="tag_feedback">Please enter your info</string>
    <string name="welcome_message_after_log_in">Welcome, %1$s !</string>
    <string name="tag_feedback_for_new_user">Please login in or subscribe to join us!</string>

    <!--subscription page-->
    <string name="btn_subscribe">Subscribe!</string>
    <string name="tag_username_subs">Please enter your username (Monash Email Address)</string>
    <string name="tag_repassword">Please re-enter your password</string>
    <string name="tag_f_name">First Name</string>
    <string name="tag_l_name">Last Name</string>
    <string name="tag_dob">Date of Birth</string>
    <string name="tag_gender">Gender</string>
    <string name="tag_male">Male</string>
    <string name="tag_female">Female</string>
    <string name="tag_study_mode">Study Mode</string>

    <string name="tag_course">Course</string>
    <string name="tag_address">Address</string>
    <string name="tag_subrub">Subrub</string>
    <string name="tag_nationality">Nationality</string>
    <string name="tag_native_language">Native Language</string>
    <string name="tag_favourite_sport">Favourite Sport</string>
    <string name="tag_favourite_movie">Favourite Movie</string>
    <string name="tag_favourite_unit">Favourite Unit</string>
    <string name="tag_current_job">Current Job</string>

    <!--navi bar header-->
    <string name="tag_nav_header1">Monash Friend Finder</string>
    <string name="tag_nav_header2">Made by Richard</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!--search page-->
    <string name="tag_search_title">Please select criteria using the spinner below:</string>
    <string name="tag_result">Searching Result:</string>
    <string name="for_all">Click me to choose criteria!</string>
    <string name="btn_map_view">Map View</string>
    <string name="tag_image_title">The Movie he/she like:</string>
    <string name="tag_snippet_title">Movie snippet:</string>

    <!--all friends page-->
    <string name="tag_all_friend_title">My Friend List</string>
    <string name="tag_sid">Student ID</string>
    <string name="tag_fname">First Name</string>
    <string name="tag_lname">Last Name</string>
    <string name="tag_range_choose_title">Please choose Friends distance from you:</string>

    <!--spinner values-->
    <string-array name="study_mode_spinner_array">
        <item>Full-time</item>
        <item>Part-time</item>
    </string-array>

    <string-array name="course_spinner_array">
        <item>MIT</item>
        <item>MBIS</item>
        <item>MDS</item>
        <item>MNS</item>
        <item>Others</item>
    </string-array>

    <string-array name="subrub_array">
        <item>Caulfield</item>
        <item>Clayton</item>
        <item>Chadstone</item>
        <item>City</item>
        <item>South Yarra</item>
    </string-array>

    <string-array name="nationality_array">
        <item>Australian</item>
        <item>Chinese</item>
        <item>vietnamese</item>
        <item>British</item>
        <item>Japanese</item>
        <item>Indian</item>
    </string-array>

    <string-array name="native_language_array">
        <item>English</item>
        <item>Chinese</item>
    </string-array>

    <string-array name="favourite_sport_array">
        <item>Basketball</item>
        <item>Football</item>
        <item>Tennis</item>
        <item>Badminton</item>
        <item>Swimming</item>
        <item>Running</item>
        <item>Table Tennis</item>
        <item>Yoga</item>
    </string-array>

    <string-array name="favourite_unit_array">
        <item>FIT5046</item>
        <item>FIT5047</item>
        <item>FIT5211</item>
        <item>FIT5042</item>
        <item>FIT5032</item>
        <item>Others</item>
    </string-array>

    <string-array name="range_radius_spinner_array">
        <item>1.0</item>
        <item>2.0</item>
        <item>3.0</item>
        <item>4.0</item>
        <item>5.0</item>
    </string-array>
</resources>
