<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="@dimen/activity_horizontal_margin">

        <!--f_name, l_name, dob, gender, study_mode, course, address, subrub,-->
        <!--nationality, native_language, favourite_sport, favourite_movie,-->
        <!--favourite_unit, current_job, username(email), password,-->
        <!--subscription_date, subscription_time-->

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/tag_feedback"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_feedback"
            android:text="@string/tag_username"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_username" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_username"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/tag_password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_password"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_repassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/tag_repassword"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_repassword"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_f_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_repassword"
            android:text="@string/tag_f_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_f_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_f_name" />

        <TextView
            android:id="@+id/tv_l_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_f_name"
            android:text="@string/tag_l_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_l_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_l_name" />

        <TextView
            android:id="@+id/tv_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_l_name"
            android:text="@string/tag_dob"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/datepicker_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_dob" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datepicker_dob"
            android:text="@string/tag_gender"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/gender_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_gender"
            android:checkedButton="@+id/rb_sem1"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Male" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Female" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_study_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender_radioGroup"
            android:text="@string/tag_study_mode"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/study_mode_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_study_mode"/>

        <TextView
            android:id="@+id/tv_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/study_mode_spinner"
            android:text="@string/tag_course"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/course_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_course"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_spinner"
            android:text="@string/tag_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_address" />

        <TextView
            android:id="@+id/tv_subrub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_address"
            android:text="@string/tag_subrub"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/subrub_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_subrub"/>

        <TextView
            android:id="@+id/tv_nationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subrub_spinner"
            android:text="@string/tag_nationality"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/nationality_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_nationality"/>

        <TextView
            android:id="@+id/tv_native_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nationality_spinner"
            android:text="@string/tag_native_language"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/native_language_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_native_language"/>

        <TextView
            android:id="@+id/tv_favourite_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/native_language_spinner"
            android:text="@string/tag_favourite_sport"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/favourite_sport_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_favourite_sport"/>

        <TextView
            android:id="@+id/tv_favourite_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/favourite_sport_spinner"
            android:text="@string/tag_favourite_movie"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/favourite_movie_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_favourite_movie" />

        <TextView
            android:id="@+id/tv_favourite_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/favourite_movie_spinner"
            android:text="@string/tag_favourite_unit"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/favourite_unit_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_favourite_unit"/>

        <TextView
            android:id="@+id/tv_current_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/favourite_unit_spinner"
            android:text="@string/tag_current_job"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/current_job_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_current_job" />

        <Button
            android:id="@+id/b_subscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_job_spinner"
            android:text="@string/btn_subscribe" />
    </RelativeLayout>
</ScrollView>
