<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/iv_monash_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_monash"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_monash_logo"
        android:text="@string/tag_username"
        android:paddingTop="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/tag_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/b_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:text="@string/btn_log_in" />

    <Button
        android:id="@+id/b_subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_login"
        android:text="@string/btn_register" />

    <Button
        android:id="@+id/b_skiplogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_subscribe"
        android:text="@string/btn_skiplogin" />
</RelativeLayout>